# chesslike-v1

./: Cargo.toml
client/: Cargo.toml
client/src/: client.rs  error.rs  main.rs  network.rs
client/src/ui/: mod.rs
server/: Cargo.toml  docker-compose.yml
server/src/: error.rs  lobby.rs  main.rs  room.rs  server.rs  service.rs
server/src/event/: client_message.rs
server/src/handling/: mod.rs
server/src/handling/rooms/: mod.rs
server/src/handling/rooms/in_game/: mod.rs
stub/: Cargo.toml
stub/src/packet/: mod.rs
